// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pearl/atoms passes the snapshot test for a <Text> component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="success.400"
    fontFamily="body"
    fontWeight="hairline"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    asdasd
  </Text>
</View>
`;

exports[`pearl/atoms passes the snapshot test for a <View> component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    box1={
      Object {
        "backgroundColor": "success.500",
        "height": 50,
        "width": 50,
      }
    }
    root={
      Object {
        "backgroundColor": "danger.400",
        "boxShadow": "4xl",
        "height": 200,
        "p": "4xl",
        "width": 200,
      }
    }
    style={
      Object {
        "backgroundColor": "#FF8371",
        "display": "flex",
        "elevation": 28,
        "height": 200,
        "shadowColor": "#1A2138",
        "shadowOffset": Object {
          "height": 28,
          "width": 0,
        },
        "shadowOpacity": 0.16,
        "shadowRadius": 28,
        "width": 200,
      }
    }
  />
</View>
`;

exports[`pearl/basic passes the snapshot test for a <Text> component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "display": "flex",
      }
    }
  >
    asdasd
  </Text>
</View>
`;

exports[`pearl/basic passes the snapshot test for a <View> component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
      }
    }
  />
</View>
`;

exports[`pearl/molecules passes the snapshot test for a <View> component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    style={
      Object {
        "display": "flex",
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "display": "flex",
          "transform": Array [],
        }
      }
    />
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "display": "flex",
          "transform": Array [],
        }
      }
    />
  </View>
</View>
`;
